--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">Ezgo</div>
-                            <p>★ 사내 PHP 웹사이트 Java로 변환. 회사 홈페이지 개발. o2o 국책과제 수행. Linux 서버 운영 보조. (2019.05 ~ 2019.09) <br>&emsp;사용언어 : Java, 사용환경 : Spring boot, MySQL<br>
-                            ★ Renault Nissan AVN 개발 (LG전자 파견 2019.10 ~ 2020.01) <br>&emsp;사용언어 : C++, 사용환경 : Linux</p>
+                            <p>★ 사내 PHP 웹사이트 Java로 변환. 회사 홈페이지 개발 
+                            <a class="social-icon" href="http://www.ezgomap.com" target="_blank">
+								<i class="fas fa-external-link-alt"></i>
+							</a>.
+							&ensp;o2o 국책과제 수행. Linux 서버 운영 보조. (2019.05 ~ 2019.09) <br>&emsp;사용언어 : Java, 사용환경 : Spring boot, MySQL<br>
+                            	★ Renault Nissan AVN 개발 (LG전자 파견 2019.10 ~ 2020.01) <br>&emsp;사용언어 : C++, 사용환경 : Linux</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2019 - January 2020</span></div>
                     </div>
